fixing navside__navbox margins and alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,7 @@
   &-search {
     width: 36%;
     padding: 0.5rem;
+    outline: 0;
     font-size: 0.8rem;
   }
 }
