--- a/app/styles/navbox.scss
+++ b/app/styles/navbox.scss
@@ -4,39 +4,48 @@
 .navside__searchbar {
   width: 100%;
   margin-bottom: 0.5rem;
-  padding-left: 1rem;
   font-size: 1.4rem;
 
   & input {
     margin-right: 1rem;
     padding: 0.2rem 1.3rem 0.2rem 0.2rem;
     border: 0.1rem solid $c-border-purple;
+    outline: 0;
     background: $c-highlight-black;
     color: $c-border-grey;
     font-size: 0.8rem;
+
   }
 }
 
 .navside__navbox {
   width: 100%;
+  margin: 1rem;
+  padding: 0;
   text-align: left;
 
   &-link {
-    margin-top: 0.2rem;
-    padding: 0.5rem 0;
+    display: flex;
+    align-items: center;
+    border-left: 0.2rem solid transparent;
     color: $c-white;
-    font-size: 1rem;
-    font-weight: lighter;
     text-decoration: none;
 
-    & h2 {
-      padding: 0 1rem;
-      border-left: 0.2rem solid transparent;
+    &:hover {
+      border-left: 0.2rem solid $c-border-purple;
+      background: $c-highlight-black;
+    }
 
-      &:hover {
-        border-left: 0.2rem solid $c-border-purple;
-        background: $c-highlight-black;
-      }
+    & i {
+      margin-left: 0.4rem;
+    }
+
+    & h2 {
+      padding-left: 0.5rem;
+      color: $c-white;
+      font-size: 1rem;
+      font-weight: lighter;
+
     }
   }
 }
